Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1722

DOMUserDataHandler events are not triggered when cloning documents

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • 2.6.0
    • 2.7.0
    • DOM
    • None
    • any

    Description

      The attached test case shows that the data handler "clone" event is not triggered when the complete document is being cloned. This test case is for the 3.0.0 branch and expects a file named "test.xml" to be present in the working directory. The contents of
      test.xml are no important as long as it is a valid XML file.

      Attachments

        1. clone.cxx
          1 kB
          Boris Kolpackov

        Activity

          People

            amassari Alberto Massari
            bsk Boris Kolpackov
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: