Send the NODE_CLONED notification for each node in the tree when cloning the entire DOMDocument (XERCESC-1722)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@557202 13f79535-47bb-0310-9956-ffa450edef68